# overshoot

./: .gitignore  Dockerfile  LICENSE  README.md  dev-start.sh  dev-stop.sh  pyproject.toml
docs/: PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/components/ui/: chip.tsx  slider.tsx  tooltip.tsx
frontend/src/app/pages/: Home.tsx
frontend/src/styles/: fonts.css  index.css  theme.css
src/overshoot/: cli.py
src/overshoot/api/: main.py  routes.py
